<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hb_interfaces</name>
  <version>1.10.1</version>
  <description>
    hb_interfaces messages.
  </description>
  <maintainer email="sahil.shinde@e-yantra.org">Sahil Shinde</maintainer>
  <license>BSD</license>
  <author email="sahil.shinde@e-yantra.org">Sahil Shinde</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>builtin_interfaces</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <test_depend>ament_lint_common</test_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
